# handshake-exercise

./: Cargo.toml  README.md
src/: main.rs
src/bitcoin/: codec.rs  decode.rs  encode.rs  error.rs  mod.rs  protocol.rs
src/ethereum/: codec.rs  decode.rs  encode.rs  error.rs  mod.rs
